[package]
name = "elsci_chemikaze"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "chemikaze"
path = "src/main/rust/cli.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parser_bench"
harness = false

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1

[profile.release]
debug = true
